k8s/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-container
        image: solaris24/learn:app-v1.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080 
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "0.5"
            memory: "128Mi"
status: {}


---

apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: app
  labels:
    run: app
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: app
  type: NodePort
